tests/ui/pub/pub-ident-struct-4.rs
// run-crablangfix

pub T(String);
//~^ ERROR missing `struct` for struct definition

fn main() {}
